--- a/mainStyle.css
+++ b/mainStyle.css
@@ -4,6 +4,19 @@ body{
     font-size: 5rem;
     font-weight: 700;
 }
+hr{
+    width: 450px;
+    border: 2px solid #212121;
+    outline: none;
+    background-color: #ffffff;
+    height: 0.8rem;
+    border-radius:10px ;
+    position: relative;
+    top: 0;
+    left: 0.8rem;
+    right: 0;
+    bottom: 0;
+}
 .game-title{
     font-size: 4rem;
     text-align: center;
@@ -33,8 +46,15 @@ body{
     padding: 10px;
     font-size: 2rem;
     cursor: pointer;
+    font-weight: 500;
+    /* font-style: ; */
 
 }
+.main-btn-design:disabled{
+    color: #212121;
+    cursor: not-allowed;
+}
+
 #start:hover{
     background-color: #212121;
     color: #fff;
@@ -110,7 +130,7 @@ body{
     top:15rem;
     background-color: #fff;
     overflow: hidden;
-    left: 8rem;
+    left: 25rem;
     z-index: 10;
 }
 #game-over{
