--- a/mainStyle.css
+++ b/mainStyle.css
@@ -3,6 +3,8 @@ body{
     font-family:Helvetica, sans-serif;
     font-size: 5rem;
     font-weight: 700;
+    background-color: #212121;
+    color: #ffffff;
 }
 hr{
     width: 450px;
@@ -39,29 +41,30 @@ hr{
     text-align: center;
     position: relative;
     top: 0rem;
-    background-color: #fff;
-    border: 2px solid #212121;
+    background-color: #212121;
+    border: 2px solid #ffffff;
     border-radius: 10px;
     width: fit-content;
     padding: 10px;
     font-size: 2rem;
     cursor: pointer;
     font-weight: 500;
+    color: #fff;
     /* font-style: ; */
 
 }
 .main-btn-design:disabled{
-    color: #212121;
+    color: #ffffff;
     cursor: not-allowed;
 }
 
 #start:hover{
-    background-color: #212121;
-    color: #fff;
+    background-color: #fff;
+    color: #212121;
 }
 #reset:hover{
-    background-color: #212121;
-    color: #fff;
+    background-color: #fff;
+    color: #212121;
 }
 .about-players{
     float: right;
@@ -75,18 +78,18 @@ hr{
 #player-chance{
     position: relative;
     top: 20px;
-    font-weight: 600;
     text-align: center;
 }
 
 #game-grid{
     position: relative;
-    left: 38vw;
     top: 1rem;
-    width: fit-content;
+    width: 100vw;
+    align-items: center;
     display: none;
     opacity: 1;
-    /* border: 2px solid red; */
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .game-space-rows{
@@ -94,14 +97,16 @@ hr{
     flex-direction: row;
     height: 150px;
     width: 450px;
-    border: 2px solid red;
+    gap: 1rem;
 }
 .game-space-rows div{
     display: inline-block;
     height: 100%;
     width: 100%;
     cursor: pointer;
-    
+    border-radius: 30px;
+    background: #ffffff;
+    box-shadow:  5px 5px 15px #d9d9d9, -5px -5px 15px #ffffff
 }
 .game-obj{
     font-size: 140px;
@@ -110,13 +115,7 @@ hr{
 .game-obj p{
     margin: 0;
     margin-top: 15px;
-}
-.game-grid-c1{
-    border-right: 5px solid #212121;
-    border-bottom: 5px solid #212121;
-}
-.game-grid-c3{
-    border-bottom: 5px solid #212121;
+    color: #212121;
 }
 .game-end-banner div{
     font-size: 2rem;
@@ -124,13 +123,11 @@ hr{
     margin-top: 1rem;
 }
 .game-end-banner{
-    width: fit-content;
+    width: 100vw;
     text-align: center;
     position: relative;
     top:15rem;
-    background-color: #fff;
     overflow: hidden;
-    left: 25rem;
     z-index: 10;
 }
 #game-over{
@@ -146,6 +143,11 @@ hr{
     font-size: 3.7rem;
     
 }
+/* @media only screen and (max-width: 1025px){
+    #game-grid{
+        left: 33vw;
+    }
+} */
 @media only screen and (min-width: 769px) and (max-width:1024px){
     .game-title{
         font-size: 3rem;
@@ -162,7 +164,6 @@ hr{
     }
     .game-space-rows{
         height: 16vh;
-        width: 92vw;
     }
     #game-grid{
         width: 100vw;
@@ -184,11 +185,8 @@ hr{
         top: 0rem;
 
     }
-    .game-obj p{
-        font-size: 10rem;
-    }
     .game-end-banner div{
-        font-size: 1rem;
+        font-size: 2rem;
     }
     .game-end-banner{
         width: 100vw;
@@ -198,10 +196,10 @@ hr{
         /* right: 0.5rem; */
     }
     #player-1{
-        font-size: 1.7rem;  
+        font-size: 2.7rem;  
     }
     #player-2{
-        font-size: 1.7rem;
+        font-size: 2.7rem;
         
     }
     #game-over{
@@ -227,7 +225,6 @@ hr{
     }
     .game-space-rows{
         height: 16vh;
-        width: 93vw;
     }
     #game-grid{
         width: 100vw;
@@ -249,11 +246,8 @@ hr{
         top: 0rem;
 
     }
-    .game-obj p{
-        font-size: 10rem;
-    }
     .game-end-banner div{
-        font-size: 1rem;
+        font-size: 2rem;
     }
     .game-end-banner{
         width: 100vw;
@@ -263,10 +257,10 @@ hr{
         /* right: 0.5rem; */
     }
     #player-1{
-        font-size: 1.7rem;  
+        font-size: 2.7rem;  
     }
     #player-2{
-        font-size: 1.7rem;
+        font-size: 2.7rem;
         
     }
     #game-over{
@@ -291,12 +285,14 @@ hr{
     }
     .game-space-rows{
         height: 10vh;
-        width: 93vw;
+        width: 90vw;
     }
     #game-grid{
         width: 100vw;
-        top: 2rem;left: 0;
-        left: 0.2rem;
+        top: 2rem;
+    }
+    .game-space-rows div{
+        border-radius: 15px;
     }
     .main-btn-design{
         font-size: 1.2rem;
@@ -315,7 +311,7 @@ hr{
 
     }
     .game-obj p{
-        font-size: 4rem;
+        font-size: 5rem;
     }
     .game-end-banner div{
         font-size: 1rem;
@@ -341,8 +337,8 @@ hr{
     }
 }
 @media only screen and (max-width: 320px){
-    body{
-        font-size: 3rem;
+    .game-space-rows div{
+        border-radius: 15px;
     }
     .game-title{
         font-size: 2rem;
